feat: add index.js text
增加东西

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "scripts": {
-    "commit": "git-cz",
-    "commitmsg": "validate-commit-msg"
+    "commit": "git-cz"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "validate-commit-msg"
+    }
   },
   "devDependencies": {
     "commitizen": "^4.0.3",
