--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
   },
   "devDependencies": {
     "commitizen": "^4.0.3",
+    "conventional-changelog-angular-emoji": "^0.2.2",
     "conventional-changelog-cli": "^2.0.31",
     "cz-conventional-changelog": "^3.1.0",
     "cz-conventional-changelog-emoji": "0.1.0",
+    "cz-customizable": "^6.2.0",
     "husky": "^4.2.3",
     "validate-commit-msg": "^2.14.0"
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog-emoji"
+      "path": "cz-conventional-changelog-emoji"
     }
   },
   "dependencies": {
