--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "commit": "git-cz&&git push",
+    "commit": "git add . && git-cz && git push",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "husky": {
@@ -9,18 +9,13 @@
     }
   },
   "devDependencies": {
+    "@codeyhj/changlog-emojis": "0.0.4",
     "commitizen": "^4.0.3",
-    "conventional-changelog-angular-emoji": "^0.2.2",
-    "conventional-changelog-cli": "^2.0.31",
-    "conventional-commit-types-emoji": "^0.1.0",
-    "cz-conventional-changelog": "^3.1.0",
-    "cz-conventional-changelog-emoji": "0.1.0",
-    "cz-customizable": "^6.2.0",
     "husky": "^4.2.3"
   },
   "config": {
     "commitizen": {
-      "path": "./test/index.js"
+      "path": "./node_modules/@codeyhj/changlog-emojis"
     }
   },
   "dependencies": {
